Changing NEO4j dependency to 4.4.4, compatible with Java 15